--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,13 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>Save the date.</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>Der 61. Deutsche Kongress für Geographie findet<br />
+              <strong>vom 29. September bis zum 2. Oktober 2021</strong><br />
+              in Frankfurt am Main statt.
+            </p>
+            <a href="#kongress" class="btn btn-primary btn-xl page-scroll">Mehr Infos</a>
         </div>
     </div>
 </header>
