--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,11 +6,10 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include call-to-action.html %}
-  {% include services.html %}
-  {% include portfolio.html %}
-  {% include aside.html %}
-  {% include contact.html %}
+  {% include kongress.html %}
+  {% include tagungsort.html %}
+  {% include termine.html %}
+  {% include kontakt.html %}
   {% include scripts.html %}
 </body>
 
