--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -109,8 +109,7 @@ aside {
         }
     }
     @media (min-width: 768px) {
-        background-color: transparent;
-        border-color: rgba(white, .3);
+        background-color: rgba(0,0,0,.3);
         .navbar-header .navbar-brand {
             color: rgba(white, .7);
             &:hover,
@@ -154,8 +153,8 @@ header {
     width: 100%;
     min-height: auto;
     @include background-cover;
-    background-position: center;
-    background-image: url('../img/header.jpg');
+    background-position: stretch;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5) ), url('../img/header.jpg');
     text-align: center;
     color: white;
     .header-content {
@@ -175,7 +174,7 @@ header {
             }
             p {
                 font-weight: 300;
-                color: rgba(white, .7);
+                color: white;
                 font-size: 16px;
                 margin-bottom: 50px;
             }
