bare minimum working

--- a/_includes/tagungsort.html
+++ b/_includes/tagungsort.html
@@ -1,13 +1,14 @@
 <section class="no-padding" id="tagungsort">
     <div class="container-fluid">
       <div class="row no-gutter">
-          <div class="col-lg-4 col-lg-offset-2 col-sm-6">
-            <img src="img/HZ.jpg" width="100%">
+          <div class="col-lg-4 col-lg-offset-2 col-sm-6" style="height:100%">
+            <img src="img/HZ.jpg" width="100%" style="vertical-align: middle">
           </div>
           <div class="col-lg-4 col-sm-6" style="padding: 25px">
               <h2 class="text-center">Der Tagungsort</h2>
                 <hr>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Der DKG 2021 wird ein Kongress der kurzen Wege. In zentraler Lage Deutschlands liegt Frankfurt, in zentraler Lage Frankfurts liegt der Campus Westend der Goethe-Universität, in zentraler Lage des Campus liegen Hörsaalzentrum und Seminarhaus, die den Kongress beherbergen werden. Wasserbecken, Grünflächen, offene Plätze, Cafés, Biergärten, denkmalgeschützte Altbauten und prämierte Neubauten - nicht wenigen gilt der Campus Westend als „Deutschlands schönster Campus“. Allerdings erinnert hier auch das monumentale IG-Farben-Gebäude alltäglich an die Verstrickungen des Gelndes in die nationalsozialistische Kriegs- und Vernichtungsmaschinerie.
+</p>
         </div>
       </div>    
     </div>
