--- a/_includes/termine.html
+++ b/_includes/termine.html
@@ -1,12 +1,28 @@
   <section id="termine" class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Termine</h2>
+              <h2>Zeitplan</h2>
               <hr class="light">
-              <i class="fa fa-inbox fa-5x wow bounceIn" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
-              Juni – Dezember 2018<br/>
-              <strong>Call for sessions</strong>
-              <hr class="light">
+              <div style="margin-top: 25px">
+                <i class="fa fa-inbox fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
+                <span class="btn">Call for sessions</span>
+              </div>
+              <div  style="margin-top: 25px">
+                <i class="fa fa-ticket fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
+                <span class="btn">Early bird registration</span>
+              </div>
+              <div  style="margin-top: 25px">
+                <i class="fa fa-pencil fa-5x wow bounceIn" style="margin-bottom: 15px"  data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
+                <span class="btn">Call for papers</span>
+              </div>
+              <div  style="margin-top: 25px">
+                <i class="fa fa-bell fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
+                <span class="btn">Registration deadline</span>
+              </div>
           </div>
       </div>
   </section>
