--- a/_includes/kongress.html
+++ b/_includes/kongress.html
@@ -1,10 +1,11 @@
 <section class="bg-primary" id="kongress">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="section-heading text-center">Der DKG 2021 in Frankfurt am Main</h2>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">Der 62. Deutsche Kongress für Geographie</h2>
                 <hr class="light">
-                <p class="text-faded">Der 61. Deutsche Kongress der Geographie findet unter dem Motto <q>INSERT MOTTO HERE</q> statt. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="text-faded">Nach 1883 und 1951 findet 2021 bereits zum dritten Mal der Deutsche Kongress für Geographie in Frankfurt statt. Die beiden Frankfurter Institute laden die internationale Fachgemeinde und die interessierte Öffentlichkeit vom 29. September 2021 bis zum 2. Oktober 2021 zum engagierten Austausch über aktuelle wissenschaftliche Arbeiten und gesellschaftlich relevante Themen auf den Campus Westend der Goethe-Universität ein.
+</p>
             </div>
         </div>
     </div>
