--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -21,9 +21,8 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h3>Impressum</h2>
+              <p><strong>Impressum:</strong></strong>
                 <p>
-                  DKG Ortsausschuss<br />
                   Institut für Humangeographie<br />
                   Goethe-Universität Frankfurt<br />
                   60629 Frankfurt am Main<br />
