--- a/_includes/tagungsort.html
+++ b/_includes/tagungsort.html
@@ -1,13 +1,15 @@
 <section class="no-padding" id="tagungsort">
-    <div class="container-fluid">
-      <div class="row no-gutter">
-          <div class="col-lg-4 col-lg-offset-2 col-sm-6" style="height:100%">
+    <div class="container-fluid" style="height:100%">
+      <div class="row no-gutter" style="height:100%">
+          <div class="col-lg-5 col-lg-offset-1 col-sm-6" style="height:100%">
+            <div style="display:flex; align-items:center">
             <img src="img/HZ.jpg" width="100%" style="vertical-align: middle">
+            </div>
           </div>
-          <div class="col-lg-4 col-sm-6" style="padding: 25px">
+          <div class="col-lg-5 col-sm-6" style="padding: 25px">
               <h2 class="text-center">Der Tagungsort</h2>
                 <hr>
-              <p>Der DKG 2021 wird ein Kongress der kurzen Wege. In zentraler Lage Deutschlands liegt Frankfurt, in zentraler Lage Frankfurts liegt der Campus Westend der Goethe-Universität, in zentraler Lage des Campus liegen Hörsaalzentrum und Seminarhaus, die den Kongress beherbergen werden. Wasserbecken, Grünflächen, offene Plätze, Cafés, Biergärten, denkmalgeschützte Altbauten und prämierte Neubauten - nicht wenigen gilt der Campus Westend als „Deutschlands schönster Campus“. Allerdings erinnert hier auch das monumentale IG-Farben-Gebäude alltäglich an die Verstrickungen des Gelndes in die nationalsozialistische Kriegs- und Vernichtungsmaschinerie.
+              <p>Der DKG 2021 wird ein Kongress der kurzen Wege. In zentraler Lage Deutschlands liegt Frankfurt, in zentraler Lage Frankfurts liegt der Campus Westend der Goethe-Universität, in zentraler Lage des Campus liegen Hörsaalzentrum und Seminarhaus, die den Kongress beherbergen werden. Wasserbecken, Grünflächen, offene Plätze, Cafés, Biergärten, denkmalgeschützte Altbauten und prämierte Neubauten - nicht wenigen gilt der Campus Westend als „Deutschlands schönster Campus“. Allerdings erinnert hier auch das monumentale IG-Farben-Gebäude alltäglich an die Verstrickungen des Geländes in die nationalsozialistische Kriegs- und Vernichtungsmaschinerie.
 </p>
         </div>
       </div>    
