--- a/_includes/termine.html
+++ b/_includes/termine.html
@@ -1,27 +1,32 @@
   <section id="termine" class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Zeitplan</h2>
+              <h2>Voraussichtlicher Zeitplan</h2>
               <hr class="light">
               <div style="margin-top: 25px">
-                <i class="fa fa-inbox fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
-                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
-                <span class="btn">Call for sessions</span>
+                <i class="fas fa-clipboard-list fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">Juli – Oktober 2020</span><br/>
+                <span class="event">Call for sessions</span>
               </div>
               <div  style="margin-top: 25px">
-                <i class="fa fa-ticket fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
-                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
-                <span class="btn">Early bird registration</span>
+                <i class="fa fa-chalkboard fa-5x wow bounceIn" style="margin-bottom: 15px"  data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">Dezember 2020 – März 2021</span><br/>
+                <span class="event">Call for papers</span>
               </div>
               <div  style="margin-top: 25px">
-                <i class="fa fa-pencil fa-5x wow bounceIn" style="margin-bottom: 15px"  data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
-                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
-                <span class="btn">Call for papers</span>
+                <i class="fas fa-kiwi-bird fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">April – Juli 2021</span><br/>
+                <span class="event">Early bird registration</span>
               </div>
               <div  style="margin-top: 25px">
-                <i class="fa fa-bell fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
-                <span class="text-faded">(Termin wird bekannt gegeben)</span><br/>
-                <span class="btn">Registration deadline</span>
+                <i class="fas fa-book-open fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">Juli 2021</span><br/>
+                <span class="event">Veröffentlichung des vorläufigen Programms</span>
+              </div>
+              <div style="margin-top: 25px">
+                <i class="fas fa-door-open fa-5x wow bounceIn" style="margin-bottom: 15px" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: bounceIn;"></i><br/>
+                <span class="text-faded">29. September – 2. Oktober 2021</span><br/>
+                <span class="event">Deutscher Kongress für Geographie</span>
               </div>
           </div>
       </div>
