making scss structure github compatible

--- a/css/creative.scss
+++ b/css/creative.scss
@@ -7,7 +7,7 @@
 @import "./variables.scss";
 
 // Import Bootstrap
-@import "./vendor/bootstrap/scss/bootstrap.scss";
+@import "./bootstrap/bootstrap.scss";
 
 // Import custom styles
 @import "./global.scss";
