fixed broken img link

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -54,7 +54,7 @@ h2 {
 
 .hz-bg {
   min-height: 40vh !important;
-  background: url(../img/hz.jpg) no-repeat center center;
+  background: url(../img/HZ.jpg) no-repeat center center;
   background-size: cover;
 }
 
