--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -1,22 +1,24 @@
-// Global styling for this template
 body,
 html {
   width: 100%;
   height: 100%;
+  font-size: 1.1rem;
 }
 
-// Custom horizontal rules
 hr.divider {
-  max-width: 3.25rem;
+  max-width: 8.25rem;
   border-width: 0.2rem;
   border-color: $primary;
+}
+
+h1.display-2 {
+  font-weight: bold;
 }
 
 hr.light {
   border-color: $light;
 }
 
-// Button restyling
 .btn {
   font-family: $font-family-sans-serif;
 }
