--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,7 +4,7 @@ header.masthead {
   padding-bottom: calc(10rem - #{$navbar-height});
   // replace the masthead.jpg image in the /img directory to change the image
   // if the image name change, make sure to update the url path below!
-  background: linear-gradient(to bottom, #{fade-out($color1, .7)} 0%,#{fade-out($color1, .4)} 100%), url('../img/skyline.jpg');
+  background: linear-gradient(to bottom, #{fade-out($color1, 1)} 0%,#{fade-out($color1, .7)} 100%), url('../img/skyline.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
