--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -54,9 +54,8 @@ h2 {
   padding: 8rem 0;
 }
 
-.hz-bg {
-  min-height: 40vh !important;
-  background: url(../img/HZ.jpg) no-repeat center center;
+.img-div {
+  min-height: 60vh !important;
   background-size: cover;
 }
 
